# plasma-settings

./: CMakeLists.txt  README.md  org.kde.mobile.plasmasettings.desktop  settings.csv  settings.po  settings_main.notifyrc
debian/: changelog  control  copyright  plasma-settings.postinst
modules/: CMakeLists.txt
modules/battery/: CMakeLists.txt  Messages.sh  battery.cpp  battery.desktop  battery.h  batteryutil.cpp  batteryutil.h
modules/battery/package/: metadata.desktop
modules/battery/package/contents/ui/: Contexts.qml  Home.qml  JProgress.qml  Modems.qml  main.qml
modules/display/: CMakeLists.txt  Messages.sh  display.cpp  display.h  displaymodel.cpp  displaymodel.h  fontmodel.cpp  fontmodel.h  powermanagementjob.cpp  resources.qrc
modules/display/package/: metadata.desktop
modules/display/package/contents/ui/: CheckItem.qml  Display.qml  JrDialog.qml  JrFamilyDialog.qml  JrScaleDialog.qml  JrStepSlider.qml  JrStepSliderItem.qml  RoSlider.qml  RoStepSlider.qml  Submenu.qml  main.qml
modules/info/: CMakeLists.txt  Helper.cpp  Helper.h  downloadmanager.cpp  downloadmanager.h  factoryreset.actions  hardwareinfo.cpp  info.cpp  info.h  mynetworkobject.cpp  mynetworkobject.h  qmldir  resources.qrc  updatetool.cpp  updatetool.h
modules/info/package/contents/ui/: About.qml  FactoryReset.qml  Home.qml  JrDialog.qml  Legal.qml  SettingsItem.qml  Status.qml  SystemUpdate.qml  SystemUpdateSettings.qml  main.qml
modules/keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.desktop  keyboard.h  keyboardmodel.cpp  keyboardmodel.h
modules/keyboard/package/: metadata.desktop
modules/keyboard/package/contents/ui/: Contexts.qml  Home.qml  main.qml
modules/loading/: CMakeLists.txt  Messages.sh  loading.cpp  loading.desktop  loading.h  resources.qrc
modules/loading/package/: metadata.desktop
modules/loading/package/contents/ui/: LoaderAnimation.qml  main.qml
modules/location/: CMakeLists.txt  Messages.sh  location.cpp  location.desktop  location.h  locationmodel.h
modules/location/package/contents/ui/: Home.qml  Modems.qml  main.qml
modules/password/: CMakeLists.txt  password.cpp  password.h  resources.qrc
modules/password/package/: metadata.desktop
modules/password/package/contents/ui/: Complex.qml  Keyboard.qml  Password.qml  ToastView.qml
modules/powermanagement/: CMakeLists.txt
modules/powermanagement/package/: metadata.desktop  power.cpp  power.h  powermanagementengine.cpp
modules/powermanagement/package/contents/ui/: Power.qml
modules/sound/: CMakeLists.txt  Messages.sh  sound.cpp  sound.desktop  sound.h
modules/sound/package/: metadata.desktop
modules/sound/package/contents/ui/: Contexts.qml  DeviceListItem.qml  JProgress.qml  Modems.qml  MuteButton.qml  Registrations.qml  RoSlider.qml  SimCards.qml  VolumeSlider.qml  main.qml
modules/storage/: CMakeLists.txt  storage.cpp  storage.desktop  storage.h  storagemodel.cpp  storagemodel.h
modules/storage/package/contents/ui/: Home.qml  JProgress.qml  StringUtils.js  main.qml
modules/time/: CMakeLists.txt  org.freedesktop.timedate1.pkla  timesettings.cpp  timetool.cpp  timetool.h  timezonemodel.cpp
modules/time/package/: metadata.desktop
modules/time/package/contents/ui/: DatePicker.qml  Digit.qml  Time.qml  TimePicker.qml  TimeZoneSelect.qml  main.qml
modules/wallpaper/: CMakeLists.txt  Messages.sh  listimageprovider.cpp  listimageprovider.h  resources.qrc  wallpaper.cpp  wallpaper.desktop  wallpaper.h
modules/wallpaper/package/: metadata.desktop
modules/wallpaper/package/contents/ui/: GridDelegate.qml  HoverItem.qml  JGridView.qml  JSetMenu.qml  LockScrrenView.qml  MainInterface.qml  RadiusImage.qml  RectshowView.qml  SystemWallpaperView.qml  WallpaperEditView.qml  main.qml  openUtils.js
package/contents/ui/: ApplicationPage.qml  JBackground.qml  JDialog.qml  JSettingContainer.qml  KCMContainer.qml  MenuItem.qml  ModulesList.qml  main.qml
po/zh_CN/: kcm_battery.po  kcm_cursortheme.po  kcm_display.po  kcm_info.po  kcm_keyboard.po  kcm_location.po  kcm_mobile_info.po  kcm_mobile_power.po  kcm_password.po  kcm_pointer.po  kcm_sound.po  kcm_storage.po  kcm_trackpad.po  kcm_translations.po  settings.po
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  module.cpp  module.h  modulesmodel.cpp  modulesmodel.h  networkstatus.cpp  networkstatus.h  qmldebugger.cpp  qmldebugger.h  resources.qrc  settingsapp.cpp  settingsapp.h
